Bergen - saml auth login page layout issues corrected
Related to-do: Bergen: New text, logo and links in header and footer in the theme Bergen
https://basecamp.com/2124401/projects/5622897/todos/234986357

--- a/theme/kommit/style/theme.css
+++ b/theme/kommit/style/theme.css
@@ -1389,9 +1389,21 @@ div.loginpanel h2 {
   padding: 5px;
 }
 .loginbox .loginform .form-label {
-  clear: all;
-  padding: 0em 0em 0.2em 1.6em;
+  clear: both;
+  padding: 0 0 .2em 1.6em;
   text-align: center;
+}
+#page-auth-saml-login div.loginpanel h2 {
+  line-height: initial;
+}
+#page-auth-saml-login .btn-login {
+  height: auto;
+  min-height: 65px;
+  min-width: 140px;
+  width: 50%;
+}
+#page-auth-saml-login .login-logo {
+  padding: 20px;
 }
 #page-course-index .buttons input[type="submit"] {
   margin-top: 1.2em;
